# django-prod-skillbox

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/mysite/: settings.py
