[tool.poetry]
name = "django-prod-skillbox"
version = "0.1.0"
description = ""
authors = ["Yakovlev Sergey <monsterroot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.0"
django-debug-toolbar = "4.0.0"
django-filter = "22.1"
djangorestframework = "3.14.0"
pillow = "9.4.0"
pytz = "2022.7.1"
gunicorn = "23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
